# Conversion

./: ARCHITECTURE.md  README.md  pyproject.toml
Image_PDF/: JPEGToPDF.py  PNGtoPDF.py
PDF_EPUB/: GeorgeOrwell_AnimalFarm.epub  PDF2Epub.py  PdfDebug.py  Sample_extracted.txt  Sample_extracted_v2.txt  Sample_extracted_v3.txt  manual.txt  output.epub  sample.pkl  sample.txt
PDF_EPUB/filemanagement/: epub_creator.py  pdf_extractor.py  text_splitter.py
apps/image_scrubber_api/src/: main.py  pyproject.toml
apps/image_scrubber_api/src/api/: routes_images.py
apps/image_scrubber_api/src/image_scrubber_api/: main.py
apps/image_scrubber_api/src/image_scrubber_api/api/: routes_images.py
apps/image_scrubber_api/src/image_scrubber_api/core/: config.py
apps/image_scrubber_api/tests/: test_images_endpoint.py
apps/image_scrubber_cli/src/: main.py  pyproject.toml
apps/image_scrubber_cli/tests/: test_cli.py
apps/image_scrubber_desktop/: pyproject.toml
apps/image_scrubber_desktop/src/: main.py
apps/image_scrubber_desktop/src/image_scrubber_desktop/: main.py
apps/image_scrubber_desktop/src/image_scrubber_desktop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/image_scrubber_desktop/src/image_scrubber_desktop/services/: qt_worker.py
apps/image_scrubber_desktop/src/image_scrubber_desktop/ui/: main_window.py
apps/image_scrubber_desktop/src/services/: qt_worker.py
apps/image_scrubber_desktop/src/ui/: main_window.py
apps/image_scruber_cli/src/image_scrubber_cli/: main.py
txt_JSON-YAML/: txt_to_format.py
