[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = [
  "apps",
  "packages",
]

[project]
name = "cybersec-monorepo"
version = "0.1.0"
description = "Monorepo de micro-SaaS de ciberseguridad y privacidad"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "mkdocs",
  "mkdocs-material",
]