[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-scrubber-desktop"
version = "0.1.0"
description = "PySide6 desktop UI for image metadata scrubbing"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7.0",
  "image-scrubber-core",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["image_scrubber_desktop*"]

[project.scripts]
image-scrubber-desktop = "image_scrubber_desktop.src.main:main"